--- a/.github/workflows/develop_my-func-test.yml
+++ b/.github/workflows/develop_my-func-test.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure Functions: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python project to Azure Function App - my-func-test
+name: Build and deploy Python project to Azure Function App - brewdat-bees-ghq-sales-commperf-funcapp-p
 
 on:
   push:
@@ -12,24 +12,24 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
-  PYTHON_VERSION: '3.11' # set this to the python version to use (supports 3.6, 3.7, 3.8)
+  PYTHON_VERSION: '3.12.1' # set this to the python version to use (supports 3.6, 3.7, 3.8)
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: self-hosted-prod
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Python version
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Create and start virtual environment
         run: |
           python -m venv venv
-          source venv/bin/activate
+          .\venv\Scripts\Activate
 
       - name: Install dependencies
         run: pip install -r requirements.txt
@@ -37,7 +37,7 @@ jobs:
       # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: Compress-Archive -Path .\* -DestinationPath .\release.zip -Force
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -48,7 +48,7 @@ jobs:
             !venv/
 
   deploy:
-    runs-on: self-hosted
+    runs-on: self-hosted-prod
     needs: build
     environment:
       name: 'Production'
@@ -61,15 +61,17 @@ jobs:
           name: python-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip     
+        run: |
+          Write-Host "Extracting release.zip..."
+          Expand-Archive .\release.zip -DestinationPath .\Extracted   
         
       - name: 'Deploy to Azure Functions'
         uses: Azure/functions-action@v1
         id: deploy-to-function
         with:
-          app-name: 'my-func-test'
+          app-name: 'brewdat-bees-ghq-sales-commperf-funcapp-p'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           scm-do-build-during-deployment: true
           enable-oryx-build: true
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6974ED55C8FD4EE198DFCB2239DFAB5F }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9A853085A96945F1A1FFBD446EB95C69 }}
